fix - rm overflow in cards grids

--- a/client/src/components/footer/footer.scss
+++ b/client/src/components/footer/footer.scss
@@ -3,7 +3,7 @@
     height: 170px;
     background-color: black;
     text-align: center;
-    position: fixed;
+    // position: fixed;
     top: 85%;
     z-index: 10;
     img {
