--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -6,9 +6,9 @@ html,
 body {
   margin:0;
   padding:0;
-  overflow: hidden;
+  overflow-x: hidden;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   color: #fff;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
@@ -16,10 +16,7 @@ body {
 #root{ 
   display: flex;
   flex-direction: column;
-  justify-items: center;
   align-items: center;
-width: 100%;
-height: 100%;
 }
 
 h1 {
@@ -32,7 +29,3 @@ h1 {
 //   display: block;
 //   background-image: url('assets/images/logo.png');
 // }
-
-::-webkit-scrollbar{
-  display: none;
-}
